@@ -22,7 +22,7 @@ package org.apache.poi.examples.ss;
 import java.io.IOException;
 import java.io.OutputStream;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.List;
 
 import org.apache.poi.hssf.usermodel.HSSFWorkbook;
@@ -95,7 +95,7 @@ public final class ConditionalFormats {
             if (wb instanceof XSSFWorkbook) {
                 file += "x";
             }
-            try (OutputStream out = Files.newOutputStream(Paths.get(file))) {
+            try (OutputStream out = Files.newOutputStream(Path.of(file))) {
                 wb.write(out);
             }
             System.out.println("Generated: " + file);
